# cleuros

./: .gitignore  README.md  Readme.md  cleuros.opam  dune-project
demo/: bubble_sort.cl  cond.cl  gcd.cl
docs/: bugs.md  dev.md  impl.md  index.md  lrm.md
lib/: Makefile  ast.ml  ast.mli  calc.tb  cleuros.ml  dune  input.txt  irgen.ml  lexer.mll  parser.mly  sast.ml  scanner.mll  semant.ml  test.ml  test.sh  test_helper.ml  tester.sh
test/: README.txt  array_length.cl  array_length.py  array_loop.cl  array_loop.py  array_simple.cl  array_simple.py  basic.cl  binops.cl  binops.py  bubble_sort.py  cleuros.expected  cleuros.ml  cond.cl  cond.py  cond_no_else.cl  cond_no_else.py  custom_type.cl  custom_type.py  dune  for.cl  for.py  func.cl  func_args.cl  gcd.cl  gcd.output  gcd.py  gcd_no_main.cl  hello.cl  if_while.cl  if_while.py  main.cl  print.cl  print.py  semant.cl  semant.output  simple_func.cl  simple_func.py  string_assignment.cl  string_literal.cl  (+11 more)
test/expected/: array_loop.expected  array_simple.expected
test/result/: README_results  clean.sh
test/should_fail/: arrays_empty.cl  arrays_zero_size.cl  string_unsupported_binop.cl  undeclared_array_length.cl
